tests/ui/issues/issue-37534.stderr
error[E0404]: expected trait, found derive macro `Hash`
  --> $DIR/issue-37534.rs:1:16
   |
LL | struct Foo<T: ?Hash> {}
   |                ^^^^ not a trait
   |
help: consider importing this trait instead
   |
LL + use std::hash::Hash;
   |

error: relaxing a default bound only does something for `?Sized`; all other traits are not bound by default
  --> $DIR/issue-37534.rs:1:15
   |
LL | struct Foo<T: ?Hash> {}
   |               ^^^^^

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0404`.
